--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-VITE_API_BASE_URL=http://72.60.101.69:5000
+VITE_API_BASE_URL=https://ijaems.in/api
 JWT_SECRET=somerandomlongsecretkey123456789!@
 MONGO_URI=mongodb+srv://tpsaws2910_db_user:3TsPptblz5TUliDY@cluster0.wzdsp9f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=tpspythonteam1@gmail.com
