--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ PORT=5000
 JWT_SECRET=somerandomlongsecretkey123456789!@
 MONGO_URI=mongodb+srv://tpsaws2910_db_user:3TsPptblz5TUliDY@cluster0.wzdsp9f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=tpspythonteam1@gmail.com
-EMAIL_PASS=zgri ndnq yzjr iexw
+EMAIL_PASS=zgrindnqyzjriexw
